# tissuenarrator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tissuenarrator/: __init__.py  data.py  evaluator.py  llm.py  preprocess.py  train.py  utils.py
tutorials/: 01_preprocess.ipynb  02_train.ipynb  03_eval.ipynb  04_merfish_eval.ipynb  05_ovarian_eval.ipynb  06_pertfish_eval.ipynb  07_spatial_qa.ipynb  BASELINES.md  demo.ipynb  qa_build.py  tutorial_utils.py
tutorials/data/: README.md
